--- a/estilos/style.css
+++ b/estilos/style.css
@@ -40,3 +40,18 @@ iframe#tela {
     height: 471px;
     
 }
+section#redes-sociais {
+    text-align: right;
+}
+section#redes-sociais img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.422);
+    box-sizing: border-box;
+}
+section#redes-sociais img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.077);
+    transition: transform .3s;
+
+}
